serviceMesh-istio/denstinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  host: reviews.default.svc.cluster.local #clusterip service
  subsets:
    - name: v1
      labels:
        version: v1 # label inside pod
    - name: v2
      labels:
        version: v2 # label inside pod
